# opencode-config-generator

./: .gitignore  README.md  config-template.md  pyproject.toml
.github/workflows/: ci.yml
src/: opencode-config-template.md
src/opencode_config_generator/: __init__.py  config_manager.py  config_parser.py  diagnostic.py  main.py  types.py  validators.py
src/opencode_config_generator/detectors/: stack.py
src/opencode_config_generator/generators/: __init__.py  agents.py  agentsmd.py  commands.py  custom_tools.py  docker.py  ensemble.py  github.py  ignore.py  opencodejson.py  plugins.py  precommit.py  release.py  skills.py  vscode.py
src/opencode_config_generator/ui/: display.py  prompts.py  theme.py
tests/generators/: __init__.py  test_commands.py  test_ensemble.py  test_opencodejson.py  test_plugins.py
